--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="product.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/4.3/examples/product/product.css" rel="stylesheet">
   </head>
   <body>
     <nav class="site-header sticky-top py-1">
