--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <p class="lead font-weight-normal">Let us show you the slocum painting difference.</p>
     <a class="btn btn-outline-secondary" href="#">Get An Estimate</a>
   </div>
-  <div class="product-device shadow-sm d-none d-md-block"></div>
-  <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+  <!--div class="product-device shadow-sm d-none d-md-block"></div>
+  <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div-->
 </div>
 
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
