--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
   </div>
   <!--div class="product-device shadow-sm d-none d-md-block"></div>
   <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div-->
+  <div> <img src="https://slocumpainting.github.io/brushStroke.png" ></div>
 </div>
 
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
