--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <nav class="site-header sticky-top py-1">
   <div class="container d-flex flex-column flex-md-row justify-content-between">
     <a class="py-2" href="#">
-      <img src="https://slocumpainting.github.io/SlocumPaintingLogoTransp.png" height="48" width="126">
+      <img src="https://slocumpainting.github.io/SlocumPaintingLogoTransp.png" height="48" width="126" style="vertical-align:middle">
       <!--svg xmlns="http://www.w3.org/2000/svg" width="" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24" focusable="false"><title>Product</title><circle cx="12" cy="12" r="10"/><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/></svg-->
     </a>
     <a class="py-2 d-none d-md-inline-block" href="#">Who We Are</a>
@@ -55,7 +55,7 @@
   </div>
   <!--div class="product-device shadow-sm d-none d-md-block"></div>
   <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div-->
-  <div> <img src="https://slocumpainting.github.io/brushStroke.png" ></div>
+  <!--div> <img src="https://slocumpainting.github.io/brushStroke.png" ></div-->
 </div>
 
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
