--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     <link href="https://slocumpainting.github.io/product.css" rel="stylesheet">
   </head>
   <body>
-    <nav></nav>
+    <nav class="site-header sticky-top">
+      <img src="https://slocumpainting.github.io/SlocumPaintingLogoTransp.png" height="48" width="126" style="vertical-align:middle">
+    </nav>
     <nav class="site-header sticky-top py-1">
   <div class="container d-flex flex-column flex-md-row justify-content-between">
     <!--a class="py-2" href="#"-->
