--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
     <link href="https://slocumpainting.github.io/product.css" rel="stylesheet">
   </head>
   <body>
-    <nav class="site-header sticky-top">
-      <img src="https://slocumpainting.github.io/SlocumPaintingLogoTransp.png" height="48" width="126" style="vertical-align:middle">
+    <nav class="site-header sticky-top" text-align: center>
+      <div display: inline-block>
+        <img src="https://slocumpainting.github.io/SlocumPaintingLogoTransp.png" height="48" width="126" style="vertical-align:middle">
+      </div>
     </nav>
     <nav class="site-header sticky-top py-1">
   <div class="container d-flex flex-column flex-md-row justify-content-between">
