--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link href="https://slocumpainting.github.io/product.css" rel="stylesheet">
   </head>
   <body>
-    <nav class="site-header sticky-top" text-align: center>
+    <nav class="site-header sticky-top" style="text-align:center">
       <div display: inline-block>
         <img src="https://slocumpainting.github.io/SlocumPaintingLogoTransp.png" height="48" width="126" style="vertical-align:middle">
       </div>
