--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <h2 class="display-5">Who We Are</h2>
       <p class="lead">Is what we do.</p>
     </div>
-    <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;">And that's put out a premium painting product, expertly.</div>
+    <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"><p>And that's put out a premium painting product, expertly.</p></div>
   </div>
 </div>
 
