--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <!--div class="bg-light shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;">
       <a class="btn btn-outline-secondary" href="#">Come Work For Us</a></div>
   </div-->
-  <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+  <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden" style="color:darkorange;">
     <div class="my-3 p-3">
       <h2 class="display-5">Who We Are</h2>
       <p class="lead">Is what we do.</p>
