--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <img src="https://slocumpainting.github.io/SlocumPaintingLogoTransp.png" height="48" width="126" style="vertical-align:middle">
       </div>
     </nav>
-    <nav class="site-header sticky-top py-1">
+    <nav class="site-header py-1">
   <div class="container d-flex flex-column flex-md-row justify-content-between">
     <!--a class="py-2" href="#"-->
       <!--img src="https://slocumpainting.github.io/SlocumPaintingLogoTransp.png" height="48" width="126" style="vertical-align:middle"-->
