--- a/index.html
+++ b/index.html
@@ -41,10 +41,6 @@
     </nav>
     <nav class="site-header py-1">
   <div class="container d-flex flex-column flex-md-row justify-content-between">
-    <!--a class="py-2" href="#"-->
-      <!--img src="https://slocumpainting.github.io/SlocumPaintingLogoTransp.png" height="48" width="126" style="vertical-align:middle"-->
-      <!--svg xmlns="http://www.w3.org/2000/svg" width="" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24" focusable="false"><title>Product</title><circle cx="12" cy="12" r="10"/><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/></svg-->
-    <!--/a-->
     <a class="py-2 d-none d-md-inline-block" href="#">Who We Are</a>
     <a class="py-2 d-none d-md-inline-block" href="#">What We Do</a>
     <a class="py-2 d-none d-md-inline-block" href="#">Get An Estimate</a>
@@ -58,9 +54,6 @@
     <p class="lead font-weight-normal">Let us show you the slocum painting difference.</p>
     <a class="btn btn-outline-secondary" href="#">Get An Estimate</a>
   </div>
-  <!--div class="product-device shadow-sm d-none d-md-block"></div>
-  <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div-->
-  <!--div> <img src="https://slocumpainting.github.io/brushStroke.png" ></div-->
 </div>
 
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
@@ -69,17 +62,36 @@
       <h2 class="display-5">Turn-key Painter?</h2>
       <p class="lead">We've been looking for you.</p>
       <a class="btn btn-outline-secondary" href="#">Come Work For Us</a>
-    </div>
-    
+    </div>    
   <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden" style="color:darkorange;">
     <div class="my-3 p-3">
       <h2 class="display-5">Who We Are</h2>
       <p class="lead">Is what we do.</p>
     </div>
-    <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 50px; border-radius: 21px 21px 0 0;"><p>And that's put out a premium painting product, expertly.</p></div>
+    <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 50px; border-radius: 21px 21px 0 0;">
+      <p>And that's put out a premium painting product, expertly.</p>
+    </div>
   </div>
 </div>
 
+ <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+  <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+    <div class="my-3 py-3">
+      <h2 class="display-5">Turn-key Painter?</h2>
+      <p class="lead">We've been looking for you.</p>
+      <a class="btn btn-outline-secondary" href="#">Come Work For Us</a>
+    </div>    
+  <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden" style="color:darkorange;">
+    <div class="my-3 p-3">
+      <h2 class="display-5">Who We Are</h2>
+      <p class="lead">Is what we do.</p>
+    </div>
+    <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 50px; border-radius: 21px 21px 0 0;">
+      <p>And that's put out a premium painting product, expertly.</p>
+    </div>
+  </div>
+</div>
+  
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
   <div class="bg-primary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
     <div class="my-3 py-3">
