--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
  <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
   <div class="bg-primary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
     <div class="my-3 py-3">
-      <h2 class="display-5">Turn-key Painter?</h2>
-      <p class="lead">We've been looking for you.</p>
-      <a class="btn btn-outline-secondary" href="#">Come Work For Us</a>
+      <h2 class="display-5">Still not convinced?</h2>
+      <p class="lead">You will be.</p>
+      <a class="btn btn-outline-secondary" href="#" style="color:white;">Trust Your Own Eyes</a>
     </div>    
   <div class="bg-primary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden" style="color:darkorange;">
     <div class="my-3 p-3">
