--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 </div>
 <footer class="container py-5">
   <div class="row">
-    <div class="col-12 col-md">
+    <!--div class="col-12 col-md">
       <!--svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mb-2" role="img" viewBox="0 0 24 24" focusable="false"><title>Product</title><circle cx="12" cy="12" r="10"/><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/></svg>
       <small class="d-block mb-3 text-muted">&copy; 2017-2019</small-->
-    </div>
+    <!--/div-->
     <div class="col-6 col-md">
       <h5>Features</h5>
       <ul class="list-unstyled text-small">
@@ -81,12 +81,12 @@
       </ul>
     </div>
     <div class="col-6 col-md">
-      <h5>Resources</h5>
+      <h5>Programs</h5>
       <ul class="list-unstyled text-small">
-        <li><a class="text-muted" href="#">Executive Painter Program</a></li>
-        <li><a class="text-muted" href="#">Painter's Apprenticeship Program</a></li>
-        <li><a class="text-muted" href="#">Business Internship Program</a></li>
-        <li><a class="text-muted" href="#"></a></li>
+        <li><a class="text-muted" href="#">Executive Painter</a></li>
+        <li><a class="text-muted" href="#">Painter's Apprenticeship</a></li>
+        <li><a class="text-muted" href="#">Business Internship</a></li>
+        <li><a class="text-muted" href="#">Marketing Specialist</a></li>
       </ul>
     </div>
     <div class="col-6 col-md">
