--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <h5>Programs</h5>
       <ul class="list-unstyled text-small">
         <li><a class="text-muted" href="#">Executive Painter</a></li>
-        <li><a class="text-muted" href="#">Painter's Apprenticeship</a></li>
+        <li><a class="text-muted" href="#">Painter's Apprentic</a></li>
         <li><a class="text-muted" href="#">Business Internship</a></li>
         <li><a class="text-muted" href="#">Marketing Specialist</a></li>
       </ul>
