--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <img src="https://slocumpainting.github.io/SlocumPaintingLogoTransp.png" height="48" width="126" style="vertical-align:middle">
   </div>
 </nav>
-<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-justify bg-light">
   <div class="col-md-5 p-lg-5 mx-auto my-5">
     <h1 class="display-4 font-weight-normal">Need some painting done?</h1>
     <p class="lead font-weight-normal">Let us show you the Slocum Painting difference.</p>
