--- a/index.html
+++ b/index.html
@@ -32,32 +32,30 @@
     <img src="https://slocumpainting.github.io/SlocumPaintingLogoTransp.png" height="48" width="126" style="vertical-align:middle">
   </div>
 </nav>
-<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-justify bg-light">
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
   <div class="col-md-5 p-lg-5 mx-auto my-5">
     <h1 class="display-4 font-weight-normal">Need some painting done?</h1>
     <p class="lead font-weight-normal">Let us show you the Slocum Painting difference.</p>
     <a class="btn btn-outline-secondary" href="#">Get An Estimate</a>
   </div>
 </div>
+  
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
   <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
     <div class="my-3 py-3">
       <h2 class="display-5">Turn-key Painter?</h2>
       <p class="lead">We've been looking for you.</p>
       <a class="btn btn-outline-secondary" href="#">Come Work For Us</a>
-    </div>    
+    </div>
+  </div>
   <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden" style="color:darkorange;">
     <div class="my-3 p-3">
       <h2 class="display-5">Who We Are</h2>
       <p class="lead">Is what we do.</p>
-    </div>
-    <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 50px; border-radius: 21px 21px 0 0;">
       <p>And that's put out a premium painting product, expertly.</p>
     </div>
   </div>
-  </div>
- <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-  <div class="bg-primary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+    <div class="bg-primary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
     <div class="my-3 py-3">
       <h2 class="display-5">Still not convinced?</h2>
       <p class="lead">You will be.</p>
