--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="my-3 py-3">
       <h2 class="display-5">Turn-key Painter?</h2>
       <p class="lead">We've been looking for you.</p>
-      <a class="btn btn-outline-secondary" href="#">Come Work For Us</a>
+      <a class="btn btn-outline-light text-white" href="#">Come Work For Us</a>
     </div>
   </div>
   <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden" style="color:darkorange;">
