--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </nav>
 <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
   <div class="col-md-5 p-lg-5 mx-auto my-5">
-    <h1 class="display-4 font-weight-normal">Need some painting done?</h1>
+    <h1 class="display-4 font-weight-normal">Need painting done?</h1>
     <p class="lead font-weight-normal">Let us show you the Slocum Painting difference.</p>
     <a class="btn btn-outline-secondary" href="#">Get An Estimate</a>
   </div>
