--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="my-3 p-3">
       <h2 class="display-5">Who We Are</h2>
       <p class="lead">Is what we do.</p>
-      <p>And that's put out a premium painting product, expertly.</p>
+      <p>Put out a premium painting product.</p>
     </div>
   </div>
     <div class="bg-primary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
