--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="bg-primary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
     <div class="my-3 py-3">
       <h2 class="display-5">Still not convinced?</h2>
-      <p class="lead">You will be.</p>
+      <p class="lead">Take a look. You will be.</p>
       <a class="btn btn-outline-light" href="#" style="color:white;">Trust Your Own Eyes</a>
     </div>
   </div>
