--- a/index.html
+++ b/index.html
@@ -50,9 +50,16 @@
   </div>
   <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden" style="color:darkorange;">
     <div class="my-3 p-3">
-      <h2 class="display-5">Who We Are</h2>
+      <!--h2 class="display-5">Who We Are</h2>
       <p class="lead">Is what we do.</p>
-      <p>Put out a premium painting product.</p>
+      <p>Put out a premium painting product.</p-->
+      <div class="col-6 col-md">
+      <h5>Resources</h5>
+      <ul class="list-unstyled text-small">
+        <li><a class="text-muted" href="#">Who We Are</a></li>
+        <li><a class="text-muted" href="#">What We Do</a></li>
+      </ul>
+    </div>
     </div>
   </div>
     <div class="bg-primary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
@@ -63,7 +70,7 @@
     </div>
   </div>
 </div>
-<footer class="container py-5">
+<footer class="container py-5" id="footer">
   <div class="row">
     <!--div class="col-12 col-md">
       <!--svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mb-2" role="img" viewBox="0 0 24 24" focusable="false"><title>Product</title><circle cx="12" cy="12" r="10"/><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/></svg>
@@ -109,5 +116,8 @@
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script></body>
+<script>
+  document.getElementById("footer").style.visibility = "hidden";
+</script>
 </html>
 
