--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
       <p class="lead">Is what we do.</p>
       <p>Put out a premium painting product.</p-->
       <div class="col-6 col-md">
-      <h5>Resources</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="text-muted" href="#">Who We Are</a></li>
-        <li><a class="text-muted" href="#">What We Do</a></li>
+      <ul class="">
+        <li><a class="" href="#">Who We Are</a></li>
+        <li><a class="" href="#">What We Do</a></li>
       </ul>
     </div>
     </div>
