--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       <!--h2 class="display-5">Who We Are</h2>
       <p class="lead">Is what we do.</p>
       <p>Put out a premium painting product.</p-->
-        <li><a class="" href="#">Who We Are</a></li>
-        <li><a class="" href="#">What We Do</a></li>
+        <a class="btn" href="#">Who We Are</a>
+      <a class="btn" href="#">What We Do</a>
     </div>
   </div>
     <div class="bg-primary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
