--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                      <button type="button" class="btn btn-lg btn-outline-warning">View</button>
+                      <button type="button" class="btn btn-lg btn-outline-warning">Edit</button>
                     </div>
                     <small class="text-muted">9 mins</small>
                   </div>
