--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link href="https://slocumpainting.github.io/product.css" rel="stylesheet">
   </head>
 <body>
-<nav class="site-header sticky-top" style="text-align:center ; vertical-align:bottom ; background-color: orange;">
+<nav class="site-header sticky-top" style="text-align:center ; vertical-align:bottom ; background-color:#ffa500;">
   <div display: inline-block>
     <img src="https://slocumpainting.github.io/SlocumPaintingLogoTransp.png" height="48" width="126" style="vertical-align:middle">
   </div>
