--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       <!--h2 class="display-5">Who We Are</h2>
       <p class="lead">Is what we do.</p>
       <p>Put out a premium painting product.</p-->
-      <a class="btn btn-outline-secondary" href="#">Who We Are</a>
-      <a class="btn btn-outline-secondary" href="#">What We Do</a>
+      <a class="btn btn-lg btn-outline-warning" href="#">Who We Are</a><br/>
+      <a class="btn btn-lg btn-outline-warning" href="#">What We Do</a>
     </div>
   </div>
     <div class="bg-primary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
