--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="https://slocumpainting.github.io/projectImages/img%20(1).jpg" alt="Card image cap">
+                <img class="card-img-top" data-src="https://slocumpainting.github.io/img%20(1).jpg" alt="Card image cap">
               </div>
             </div>
             <div class="col-md-4">
