--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </style>
     <link href="https://slocumpainting.github.io/product.css" rel="stylesheet">
   </head>
-<body>
+  <body><br/>
 <nav class="site-header sticky-top" style="text-align:center ; vertical-align:bottom ; background-color:white;">
   <div display: inline-block>
     <img src="https://slocumpainting.github.io/SlocumPaintingLogoTransp.png" height="48" width="126" style="vertical-align:middle">
